Create basic form with logic to track time for github task

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -7,7 +7,9 @@
       "@/api/*": ["./api/*"],
       "@/components/*": ["./components/*"],
       "@/contexts/*": ["./contexts/*"],
-      "@/types/*": ["./types/*"]
+      "@/styles/*": ["./styles/*"],
+      "@/types/*": ["./types/*"],
+      "@/utils/*": ["./utils/*"]
     }
   }
 }
