--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "craco-alias": "^3.0.1",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "node-polyfill-webpack-plugin": "^2.0.1"
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "node-sass": "^7.0.3"
   }
 }
