--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-REACT_APP_GITHUB_TOKEN=""
-REACT_APP_HARVEST_TOKEN=""
-REACT_APP_HARVEST_ACCOUNT_ID=""
-REACT_APP_HARVEST_API_URL=""
+REACT_APP_GITHUB_TOKEN=
+REACT_APP_HARVEST_TOKEN=
+REACT_APP_HARVEST_ACCOUNT_ID=
+REACT_APP_HARVEST_API_URL=https://api.harvestapp.com/v2/
